<resources>
    <string name="app_name">Lkhayal_admin</string>
    <string name="Connexion">Connexion</string>
    <string name="username"> Entez votre email</string>
    <string name="pwd"> Entez votre mot de passe</string>
    <string name="admin">Admin</string>
    <string name="Lkhayal">Lkhayal</string>
    <string name="Admin" />
    <string name="Bienvenue">Bienvenue :</string>
    <string name="gestion_clients">Gestion Clients</string>
    <string name="todo">TODO</string>
    <string name="gestion_seances">Gestion Seances</string>
    <string name="gestion_salaries">Gestion Salaries</string>
    <string name="gestion_taches">Gestion Taches</string>
    <string name="note">Note</string>
    <string name="detailclient">Detail de client</string>
    <string name="modifierclient"> Modifier Client</string>
    <string name="supprimerclient">Supprimer Client</string>
    <string name="ajouterclient">Ajouter Client</string>
    <string name="ajoutersalarie">Ajouter salarie</string>
    <string name="detailsalarie">Detail Salarie</string>
    <string name="modifiersalarie">Modifier Salarie</string>
    <string name="supprimersalarie">Supprimer Salarie</string>
    <string name="ajouterseance">Ajouter Seance</string>
    <string name="detailseance">Detail Seance</string>
    <string name="modifierseance">Modifier Seance</string>
    <string name="supprimerseance">Supprimer Seance</string>
    <string name="ajoutertache">Ajouter Tache</string>
    <string name="detailtache">Detail Tache</string>
    <string name="modifiertache">Modifier Tache</string>
    <string name="supprimertache">Supprimer Tache</string>
    <string name="email">Email</string>
    <string name="motdepass">Mot de passe</string>
    <string name="nom">Nom</string>
    <string name="prenom">Prenom</string>
    <string name="tele">Numero de tele</string>
    <string name="idseance">ID Seance</string>
    <string name="idclient">ID Client</string>
    <string name="idsalarie">ID Salarie</string>
    <string name="startdate">Date Début</string>
    <string name="Duree">Durée</string>
    <string name="Description">Description</string>
    <string name="listclient">Liste Client</string>
    <string name="sumClient"> Total Client : </string>
    <string name="listsalarie">Liste Salaries</string>
    <string name="sumSalarie">Totale Salaries</string>
    <string name="listseance">Liste Seances</string>
    <string name="sumSeance">Totale Seances</string>
    <string name="listtache">Liste taches</string>
    <string name="sumtache">Totale taches</string>
    <string name="msgsupprimer">"Voulez vous  vraimment supprimer ce client : "</string>
    <string name="supprimer">Supprimer</string>
    <string name="msgsupprimersalarie">Voulez vous vraimment supprimer ce salarie</string>
    <string name="Salarie">Salarie</string>
    <string name="seance">Seance</string>
    <string name="tache">Tache</string>
    <string name="msgsupprimertache">Voulez vous vraimment supprimer cette tache</string>
    <string name="msgsupprimerseance">Voulez vous vraimment supprimer cette seance</string>
    <string name="date">Date</string>
    <string name="Monitor">Monitor</string>
    <string name="typesalarie">Type Salarie</string>
    <string name="Sdate">Choisir une date</string>
    <string name="ajout">Choisir un salarie</string>
    <string name="ajouterNote">"Ajouter Remarque "</string>
    <string name="Client">choisir</string>
    <string name="Remarque">Remarque</string>
    <string name="client">Client</string>
    <string name="ajouterremarque">Ajouter Remarque</string>
    <string name="ajouternote">ajouter Remarque</string>
    <string name="sumNote">Total Note</string>
    <string name="listRemarque">Liste Remarque</string>
    <string name="Coach">Monitor</string>
    <string name="Valider">Enregistrer</string>
    <string name="Presence">Presence</string>
    <string name="ajouter">Ajouter</string>
    <string name="sum">"Total des absences "</string>
    <string name="listabsence">liste d\'absences</string>
    <string name="detail">Detail</string>
    <string name="id">IDtache</string>
    <string name="absent">absent</string>
    <string name="title">Nom du tache</string>
</resources>