<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimaryDark"
    tools:context=".detailpresent">

    <ImageView
        android:id="@id/retourimg"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_marginTop="0dp"
        android:layout_marginLeft="25dp"
        android:layout_marginStart="0dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/ic_baseline_arrow_back_24" />
    <ImageView
        android:id="@id/Home"
        android:layout_width="100dp"
        android:layout_height="50dp"
        android:layout_marginStart="30dp"
        android:layout_marginTop="0dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:src="@drawable/ic_baseline_home_24" />



    <ImageView
        android:id="@id/logodyalna"
        android:layout_width="100dp"
        android:layout_height="50dp"
        android:layout_marginStart="60dp"
        android:layout_marginTop="0dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toEndOf="@id/Home"
        android:src="@drawable/logodyalna" />





    <ImageView
        android:id="@id/Power"
        android:layout_width="wrap_content"
        android:layout_height="30dp"
        android:layout_marginEnd="10dp"
        android:layout_marginTop="0dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"

        android:background="@drawable/circle_mov"
        android:src="@drawable/ic_baseline_power_settings_new_24"/>

    <TextView
        android:id="@id/txt1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/detail"
        android:textSize="30dp"
        android:layout_marginStart="120dp"
        android:layout_marginTop="0dp"
        android:textColor="#DAE1E7"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/logodyalna" />

    <ImageView
        android:id="@id/tacheidimg"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:layout_marginStart="40dp"
        android:layout_marginTop="25dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/txt1"
        app:srcCompat="@drawable/ic_baseline_vpn_key_24" />

    <EditText
        android:id="@id/nomtachedetailpre"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="60dp"
        android:hint="@string/id"
        android:textColor="#DAE1E7"
        android:textColorHint="#DAE1E7"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/tacheidimg"
        app:layout_constraintTop_toBottomOf="@id/txt1" />


    <ImageView
        android:id="@id/starttacheimg"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:layout_marginStart="40dp"
        android:layout_marginTop="45dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tacheidimg"
        app:srcCompat="@drawable/ic_baseline_date_range_24" />

    <EditText
        android:id="@id/starttachedetailpre"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="28dp"
        android:layout_marginEnd="60dp"
        android:hint="@string/startdate"
        android:textColor="#DAE1E7"
        android:textColorHint="#DAE1E7"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/starttacheimg"
        app:layout_constraintTop_toBottomOf="@id/nomtachedetailpre" />



    <ImageView
        android:id="@id/titleimgpre"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:layout_marginStart="40dp"
        android:layout_marginTop="45dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/starttacheimg"
        app:srcCompat="@drawable/ic_baseline_notes_24" />

    <EditText
        android:id="@id/titlepre"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="28dp"
        android:layout_marginEnd="60dp"
        android:hint="@string/title"
        android:textColor="#DAE1E7"
        android:textColorHint="#DAE1E7"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/starttacheimg"
        app:layout_constraintTop_toBottomOf="@id/starttachedetailpre" />




    <ImageView
        android:id="@id/userimg"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:layout_marginStart="40dp"
        android:layout_marginTop="40dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/titleimgpre"
        app:srcCompat="@drawable/ic_baseline_person_add_alt_1_24" />

    <EditText
        android:id="@id/userFkpre"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="28dp"
        android:layout_marginEnd="60dp"
        android:hint="@string/Salarie"
        android:inputType="text"
        android:textColor="#DAE1E7"
        android:textColorHint="#DAE1E7"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/userimg"
        app:layout_constraintTop_toBottomOf="@id/titlepre" />


    <EditText
        android:id="@id/isdone"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="28dp"
        android:layout_marginEnd="60dp"
        android:hint="@string/absent"
        android:inputType="text"
        android:textColor="#DAE1E7"
        android:textColorHint="#DAE1E7"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/titlepre" />

</androidx.constraintlayout.widget.ConstraintLayout>