<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimaryDark"
    tools:context=".modifierseance">
    <ImageView
        android:id="@id/retourimg"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_marginTop="0dp"
        android:layout_marginLeft="25dp"
        android:layout_marginStart="0dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/ic_baseline_arrow_back_24" />
    <ImageView
        android:id="@id/Home"
        android:layout_width="100dp"
        android:layout_height="50dp"
        android:layout_marginStart="30dp"
        android:layout_marginTop="0dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:src="@drawable/ic_baseline_home_24" />



    <ImageView
        android:id="@id/logodyalna"
        android:layout_width="100dp"
        android:layout_height="50dp"
        android:layout_marginStart="60dp"
        android:layout_marginTop="0dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toEndOf="@id/Home"
        android:src="@drawable/logodyalna" />




    <ImageView
        android:id="@id/Power"
        android:layout_width="wrap_content"
        android:layout_height="30dp"
        android:layout_marginEnd="10dp"
        android:layout_marginTop="0dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"

        android:background="@drawable/circle_mov"
        android:src="@drawable/ic_baseline_power_settings_new_24"/>


    <TextView
        android:id="@id/txt1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/modifierseance"
        android:textSize="30dp"
        android:layout_marginStart="120dp"
        android:layout_marginTop="0dp"
        android:textColor="#DAE1E7"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/logodyalna" />

    <ImageView
        android:id="@id/key"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:layout_marginStart="40dp"
        android:layout_marginTop="25dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/txt1"
        app:srcCompat="@drawable/ic_baseline_vpn_key_24" />

    <EditText
        android:id="@id/idsdeancemodifier"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="60dp"
        android:hint="@string/idseance"
        android:textColor="#DAE1E7"
        android:textColorHint="#DAE1E7"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/idclientimg"
        app:layout_constraintTop_toBottomOf="@id/txt1" />


    <ImageView
        android:id="@id/idclientimg"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:layout_marginStart="40dp"
        android:layout_marginTop="45dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/key"
        app:srcCompat="@drawable/ic_baseline_person_24" />

    <EditText
        android:id="@id/idClientmodifier"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="28dp"
        android:layout_marginEnd="60dp"
        android:hint="@string/idclient"
        android:inputType="text"
        android:textColor="#DAE1E7"
        android:textColorHint="#DAE1E7"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/idclientimg"
        app:layout_constraintTop_toBottomOf="@id/idsdeancemodifier" />

    <ImageView
        android:id="@id/idsalarieimg"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:layout_marginStart="40dp"
        android:layout_marginTop="40dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/idclientimg"
        app:srcCompat="@drawable/ic_baseline_person_24" />

    <EditText
        android:id="@id/idsalariemodifier"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="28dp"
        android:layout_marginEnd="60dp"
        android:hint="@string/idsalarie"
        android:inputType="text"
        android:textColor="#DAE1E7"
        android:textColorHint="#DAE1E7"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/idsalarieimg"
        app:layout_constraintTop_toBottomOf="@id/idClientmodifier" />

    <ImageView
        android:id="@id/dateimg"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:layout_marginStart="40dp"
        android:layout_marginTop="40dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/idsalarieimg"
        app:srcCompat="@drawable/ic_baseline_date_range_24" />

    <EditText
        android:id="@id/startdatemodifier"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="28dp"
        android:layout_marginEnd="60dp"
        android:hint="@string/startdate"
        android:inputType="text"
        android:textColor="#DAE1E7"
        android:textColorHint="#DAE1E7"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/dateimg"
        app:layout_constraintTop_toBottomOf="@id/idsalariemodifier" />


    <ImageView
        android:id="@id/dureimg"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:layout_marginStart="40dp"
        android:layout_marginTop="40dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/dateimg"
        app:srcCompat="@drawable/ic_baseline_watch_later_24" />

    <EditText
        android:id="@id/Duremodifier"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="28dp"
        android:layout_marginEnd="60dp"
        android:hint="@string/Duree"
        android:inputType="text"
        android:textColor="#DAE1E7"
        android:textColorHint="#DAE1E7"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/dureimg"
        app:layout_constraintTop_toBottomOf="@id/startdatemodifier" />

    <ImageView
        android:id="@id/descriptionimg"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:layout_marginStart="40dp"
        android:layout_marginTop="40dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/dureimg"
        app:srcCompat="@drawable/ic_baseline_notes_24" />

    <EditText
        android:id="@id/descriptionmodifier"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="28dp"
        android:layout_marginEnd="60dp"
        android:hint="@string/Description"
        android:inputType="text"
        android:textColor="#DAE1E7"
        android:textColorHint="#DAE1E7"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/descriptionimg"
        app:layout_constraintTop_toBottomOf="@id/Duremodifier" />

    <Button
        android:id="@id/Btnenregistrereanceemodifier"
        android:layout_width="wrap_content"
        android:layout_height="40dp"
        android:paddingLeft="50dp"
        android:paddingRight="40dp"
        android:textSize="15dp"
        android:background="@drawable/btnstyle"
        android:layout_marginTop="20dp"
        android:text="@string/modifierseance"
        app:layout_constraintTop_toBottomOf="@id/descriptionimg"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        />



</androidx.constraintlayout.widget.ConstraintLayout>