<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimaryDark"
    tools:context=".detailclient">
    <ImageView
        android:id="@id/retourimg"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_marginTop="0dp"
        android:layout_marginLeft="25dp"
        android:layout_marginStart="0dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/ic_baseline_arrow_back_24" />
    <ImageView
        android:id="@id/Home"
        android:layout_width="100dp"
        android:layout_height="50dp"
        android:layout_marginStart="30dp"
        android:layout_marginTop="0dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:src="@drawable/ic_baseline_home_24" />



    <ImageView
        android:id="@id/logodyalna"
        android:layout_width="100dp"
        android:layout_height="50dp"
        android:layout_marginStart="60dp"
        android:layout_marginTop="0dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toEndOf="@id/Home"
        android:src="@drawable/logodyalna" />




    <ImageView
        android:id="@id/Power"
        android:layout_width="wrap_content"
        android:layout_height="30dp"
        android:layout_marginEnd="10dp"
        android:layout_marginTop="0dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:background="@drawable/circle_mov"
        android:src="@drawable/ic_baseline_power_settings_new_24"/>

    <TextView
        android:id="@id/txt1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/detailclient"
        android:textSize="30dp"
        android:layout_marginStart="120dp"
        android:layout_marginTop="60dp"
        android:textColor="#DAE1E7"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/logodyalna" />

    <ImageView
        android:id="@id/clientimg"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:layout_marginStart="40dp"
        android:layout_marginTop="45dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/txt1"
        app:srcCompat="@drawable/ic_baseline_person_24" />

    <EditText
        android:id="@id/nomclientdetail"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="38dp"
        android:layout_marginEnd="60dp"
        android:hint="@string/nom"
        android:textColor="#DAE1E7"
        android:textColorHint="#DAE1E7"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/clientimg"
        app:layout_constraintTop_toBottomOf="@id/txt1" />


    <ImageView
        android:id="@id/prenomimgdetail"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:layout_marginStart="40dp"
        android:layout_marginTop="45dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/clientimg"
        app:srcCompat="@drawable/ic_baseline_person_24" />

    <EditText
        android:id="@id/prenomdetail"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="28dp"
        android:layout_marginEnd="60dp"
        android:hint="@string/prenom"
        android:inputType="text"
        android:textColor="#DAE1E7"
        android:textColorHint="#DAE1E7"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/prenomimgdetail"
        app:layout_constraintTop_toBottomOf="@id/nomclientdetail" />

    <ImageView
        android:id="@id/email"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:layout_marginStart="40dp"
        android:layout_marginTop="40dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/prenomimgdetail"
        app:srcCompat="@drawable/ic_baseline_email_24" />

    <EditText
        android:id="@id/usernamedetail"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="28dp"
        android:layout_marginEnd="60dp"
        android:hint="@string/email"
        android:inputType="text"
        android:textColor="#DAE1E7"
        android:textColorHint="#DAE1E7"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/email"
        app:layout_constraintTop_toBottomOf="@id/prenomdetail" />



    <ImageView
        android:id="@id/tele"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:layout_marginStart="40dp"
        android:layout_marginTop="40dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/email"
        app:srcCompat="@drawable/ic_baseline_contact_phone_24" />

    <EditText
        android:id="@id/teleclientedetail"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="28dp"
        android:layout_marginEnd="60dp"
        android:hint="@string/tele"
        android:inputType="text"
        android:textColor="#DAE1E7"
        android:textColorHint="#DAE1E7"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/tele"
        app:layout_constraintTop_toBottomOf="@id/usernamedetail" />




</androidx.constraintlayout.widget.ConstraintLayout>